@@ -4,7 +4,9 @@ Changes
 2.9 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- The ``skin`` option of ``grokcore.view.util.url`` now accepts
+  strings that will be used as skin name as possible alternative to a
+  skin interface.
 
 
 2.8 (2012-12-11)
